--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="01-tipos/01-variables.js"></script>
+  <script src="01-tipos/03-constantes.js"></script>
 </body>
 </html>
